--- a/style copy.css
+++ b/style copy.css
@@ -27,7 +27,7 @@ li {
 }
 #logo {
 	height: 100px;
-	background-image: url('pinch.png');
+	background-image: url('Pinch.png');
 	background-size: 280px;
 	background-repeat: no-repeat;
 
